infrastructure/config/gateway-api/components/provider/hetzner/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
spec:
  infrastructure:
    annotations:
      load-balancer.hetzner.cloud/location: ${cluster_primary_location}
      load-balancer.hetzner.cloud/use-private-ip: "true"
      load-balancer.hetzner.cloud/uses-proxyprotocol: "false"
      load-balancer.hetzner.cloud/http-redirect-https: "false"
